--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: coders@deploymy.codes
   facebook:
   flickr:
-  github: deploymy-codes/deploymy-codes.github.io
+  github: deploymy-codes
   instagram:
   linkedin:
   pinterest:
