--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,11 @@ description: Deployment has never been so easy.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/9341835?v=3&s=200
 
+authors:
+  jack:
+    name: Jack Saville
+    bio: Marketing expert
+
 #
 # Flags below are optional
 #
